[package]
name = "srhd"
authors = ["Sylvan Franklin"]
description = "A lightweight and performant hotkey daemon for MacOS"
repository = "https://github.com/sylvanfranklin/srhd"
keywords = ["daemon", "MacOS", "keybinds", "service", "app launcher"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
rdev = { version = "0.5.3", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
clap = { version = "4.5.18", features = ["derive"] }
