[package]
name = "srhd"
version = "0.3.0"
edition = "2021"
authors = ["Sylvan Franklin"]
description = "A lightweight hotkey daemon for MacOS"
repository = "https://github.com/sylvanfranklin/srhd"
keywords = ["daemon", "MacOS", "keybinds", "service", "launcher"]
license = "MIT"

[profile.release]
lto = true

[dependencies]
rdev = { version = "0.5.3", features = ["serialize", "unstable_grab"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
clap = { version = "4.5.18", features = ["derive"] }
launchctl = "0.1.1"
